# TrainData

./: CMakeLists.txt  main.cpp
lib/NatorsSDK/: CMakeLists.txt
lib/NatorsSDK/examples/: Sample1_Basics.c  Sample3_Async_Programming.c
lib/WitMotion/: CMakeLists.txt  Com.cpp  Main.cpp  wit_c_sdk.h
output/: data_10000_2000_10000_000.csv  data_10000_2000_10000_001.csv  data_10000_2000_10000_002.csv  data_10000_2000_10000_003.csv  data_10000_2000_10000_004.csv  data_10000_2000_10000_005.csv  data_10000_2000_10000_006.csv  data_10000_2000_10000_007.csv  data_10000_2000_10000_008.csv  data_10000_2000_10000_009.csv  data_10000_3000_10000_000.csv  data_10000_3000_10000_001.csv  data_10000_3000_10000_002.csv  data_10000_3000_10000_003.csv  data_10000_3000_10000_004.csv  data_10000_3000_10000_005.csv  data_10000_3000_10000_006.csv  data_10000_3000_10000_007.csv  data_10000_3000_10000_008.csv  data_10000_3000_10000_009.csv  data_10000_4000_10000.csv  data_10000_4000_10000001.csv  data_10000_4000_10000002.csv  data_10000_4000_10000003.csv  data_10000_4000_10000004.csv  data_10000_4000_10000005.csv  data_10000_4000_10000006.csv  data_10000_4000_10000007.csv  data_10000_4000_10000008.csv  data_10000_4000_10000_01.csv  data_10000_4000_15000_000.csv  data_10000_4000_15000_001.csv  data_10000_4000_15000_002.csv  data_10000_4000_15000_003.csv  data_10000_4000_15000_004.csv  data_10000_4000_15000_005.csv  data_10000_4000_15000_006.csv  data_10000_4000_15000_007.csv  data_10000_4000_15000_008.csv  data_10000_4000_15000_009.csv  (+31 more)
